--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Oct  2 17:01:32 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* libvirt.spec.in: fix bug #465274 to build on RHEL
+
 Thu Oct  2 10:06:00 EST 2008 Cole Robinson <crobinso@redhat.com>
 
 	* src/qemu_driver.c: Fix startup timeout with multiple pty devices.
