--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Oct  6 12:08:40 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* po/no.po: removed it's obsoleted by np.po, fixes #335211
+
 Thu Oct  3 09:32:42 PDT 2008 Dan Smith <danms@us.ibm.com>
 	* src/lxc_container.h src/lxc_container.c
 	  src/lxc_controller.c src/lxc_driver.c: Use internal cgroup
