--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Oct  6 15:23:00 EST 2008 Cole Robinson <crobinso@redhat.com>
+
+	* tests/domainschematest: Slim down schema test result output
+
 Mon Oct  6 17:39:12 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/lxc_driver.c src/qemu_driver.c src/remote_internal.c
