--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Oct  6 15:32:00 EST 2008 Cole Robinson <crobinso@redhat.com>
+
+	* src/qemu_conf.c: Fix possible segfault if starting a qemu guest with
+	  with an inactive virtual network.
+
 Mon Oct  6 15:23:00 EST 2008 Cole Robinson <crobinso@redhat.com>
 
 	* tests/domainschematest: Slim down schema test result output
