--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Oct  7 23:08:51 CEST 2008 Jim Meyering <meyering@redhat.com>
+
+	avoid "make syntax-check" failure
+	* src/cgroup.c (virCgroupSetValueStr): Use safe_write, not write.
+
 Tue Oct  7 18:33:39 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/qemu_driver.c: another OOM handling cleanup (Guido Günther)
