fix index creation for disks * src/domain_conf.c src/util.c: fix index creation for disks >   {sd,hd,xvd,vd}z (Sanjay Rao and Chris Wright) Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -51,6 +51,7 @@ Patches have also been contributed by:
   Charles Duffy        <Charles_Duffy@messageone.com>
   Nguyen Anh Quynh     <aquynh@gmail.com>
   James Morris         <jmorris@namei.org>
+  Chris Wrigh          <chrisw@redhat.com>
 
 
   [....send patches to get your name here....]
