--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Fri Oct 10 11:17:59 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* include/libvirt/libvirt.h[.in] include/libvirt/virterror.h
+	  qemud/remote* src/driver.h src/libvirt.c src/libvirt_sym.version
+	  src/lxc_driver.c src/openvz_driver.c src/proxy_internal.c
+	  src/qemu_driver.c src/remote_internal.c src/test.c src/virsh.c
+	  src/xen_internal.c src/xen_unified.c src/xen_unified.h
+	  src/xend_internal.c src/xend_internal.h src/xm_internal.c
+	  src/xs_internal.c docs/*: cleanup virDomainCreateLinux into
+	  virDomainDefineXML, and a few additional cleanups
+
 Fri Oct 10 10:33:29 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* src/domain_conf.c src/util.c: fix index creation for disks >
