--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Fri Oct 10 12:30:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
+
+	Updated MinGW spec file.
+	* .cvsignore, Makefile.am, autobuild.sh, configure.in,
+	  mingw32-libvirt.spec.in: Import the latest MinGW libvirt spec
+	  file.  Note that the file has been renamed to conform to
+	  new Fedora packaging guidelines.
+	* autobuild.sh: Fix a bug in the generation of the $EXTRA_RELEASE
+	  field when autobuilding.
+
 Fri Oct 10 11:17:59 CEST 2008 Daniel Veillard <veillard@redhat.com>
 
 	* include/libvirt/libvirt.h[.in] include/libvirt/virterror.h
