--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Oct 10 13:30:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/xml.c, src/xen_internal.c: Cast some args to unsigned
+	long to avoid printf format specifier warnings on 32-bit
+
 Fri Oct 10 12:30:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
 
 	Updated MinGW spec file.
