--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Oct 10 15:39:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/network_conf.c, src/network_conf.h, src/network_driver.c,
+	src/test.c: Switch to using array instead of linked list for
+	network objects
+
 Fri Oct 10 15:19:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/domain_conf.c, src/domain_conf.h: Switch to using
