--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 Fri Oct 10 15:39:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
+	* src/storage_conf.c, src/storage_conf.h, src/storage_driver.c,
+	src/storage_backend_disk.c, src/storage_backend_fs.c,
+	src/storage_backend_iscsi.c, src/storage_backend_logical.c:
+	Switch storage objects to array instead of linked list
+
+Fri Oct 10 15:39:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
 	* src/network_conf.c, src/network_conf.h, src/network_driver.c,
 	src/test.c: Switch to using array instead of linked list for
 	network objects
