--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Fri Oct 10 17:51:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* docs/libvirt.rng: Document SDL attributes in schema
+	* src/qemu_conf.c, src/qemu_conf.h, src/qemu_driver.c: Support
+	SDL display configuration
+	* tests/qemuxml2argvtest.c: Set predictable env vars for SDL
+	tests.
+	* tests/qemuxml2argvdata/*.args: Add new env vars now set
+	explicitly
+
 Fri Oct 10 17:03:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/domain_conf.c, src/domain_conf.h, src/lxc_container.c,
