--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,36 @@
+Sat Oct 11 09:23:18 CEST 2008 Jim Meyering <meyering@redhat.com>
+
+	testError format strings: explicitly include domain and network names
+	This repairs the "make check" failure of tests/undefine.
+	* src/test.c (testResumeDomain, testPauseDomain): Likewise.
+	(testShutdownDomain, testGetDomainInfo, ): Likewise.
+	(testSetMemory, testSetVcpus, testDomainCreate, testDomainUndefine)
+	(testDomainGetSchedulerType, testDomainGetSchedulerParams): Likewise.
+	(testDomainSetSchedulerParams, testNetworkUndefine): Likewise.
+	(testNetworkStart, testNetworkGetBridgeName): Likewise.
+	(testDomainCoreDump, testDomainSave): Likewise, and...
+	Name the file upon failed open or write.
+	Use strerror(errno) in diagnostics.
+	* tests/undefine: Adjust expected output.
+
+	test.c (testError): Remove now-ignored dom and net parameters.
+	This is a sytnax-only change: removing the two unused parameters
+	and updating all callers:
+	* src/test.c (GET_DOMAIN, GET_NETWORK, testError)
+	(testBuildCapabilities, testOpenDefault, testOpenFromFile)
+	(testOpen, testGetHostname, testGetURI, testGetCapabilities)
+	(testLookupDomainByID, testLookupDomainByUUID)
+	(testLookupDomainByName, testResumeDomain, testPauseDomain)
+	(testShutdownDomain, testGetDomainInfo, testDomainSave)
+	(testDomainRestore, testDomainCoreDump, testGetOSType)
+	(testSetMemory, testSetVcpus, testListDefinedDomains)
+	(testNodeGetCellsFreeMemory, testDomainCreate)
+	(testDomainUndefine, testDomainGetSchedulerType)
+	(testDomainGetSchedulerParams, testDomainSetSchedulerParams)
+	(testLookupNetworkByUUID, testLookupNetworkByName)
+	(testListNetworks, testListDefinedNetworks, testNetworkUndefine)
+	(testNetworkStart, testNetworkGetBridgeName): Update callers.
+
 Fri Oct 10 19:16:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/memory.c: If size*count== 0, then virRelloc must not
