--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Oct 13 16:22:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
+
+	Build failure fixed.
+	* src/domain_conf.c: Fix build failure of the Xen proxy.
+
 Sat Oct 11 09:23:18 CEST 2008 Jim Meyering <meyering@redhat.com>
 
 	testError format strings: explicitly include domain and network names
