--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Oct 15 11:28:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
+
+	* src/libvirt.c: Register the remote driver even when we are
+	configured --without-libvirtd.  Also adds debugging of
+	registration events.
+
 Mon Oct 13 18:45:43 CEST 2008 Jim Meyering <meyering@redhat.com>
 
 	avoid many format string warnings
