Because of my patch last week that converted the various virStorage*FromString and virStorage*ToString implementations to the generic VIR_ENUM_IMPL, there were a couple of places that didn't properly set errors when they failed.  This patch fixes these places up.
Signed-off-by: Chris Lalancette <clalance@redhat.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Oct 21 19:18:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
+	* src/storage_conf.c: Make sure to set errors on paths where
+	  ->formatToString() or ->formatFromString() fail.
+
 Tue Oct 21 19:13:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
 	* src/qemu_driver.c src/storage_conf.c src/network_driver.c
 	  src/storage_driver.c: Shore up the uses of virGetLastError() so that
