--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Oct 22 09:53:00 EST 2008 Cole Robinson <crobinso@redhat.com>
+
+	* configure.in: Fix syntax error which was breaking RPM builds.
+
 Tue Oct 21 19:22:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
 	* src/storage_conf.c: Make logical pool dumpXML more idempotent with
 	  defineXML by outputting <device name='/dev/sdb' /> when we are
