An updated patch for adding <device> tags to logical findPoolSources.  Given danpb's last feedback, I completely removed the XML parsing and did it all with structures.  The result should (hopefully) be a lot easier on the eyes, and is a little more generic.
Signed-off-by: Chris Lalancette <clalance@redhat.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Oct 23 13:38:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
+	* src/storage_backend_logical.c src/storage_conf.c
+	src/storage_conf.h: Add <device> tags to the XML returned by
+	virConnectFindPoolSources for storage_backend_logical.
+
 Thu Oct 23 13:31:00 CEST 2008 Chris Lalancette <clalance@redhat.com>
 	* src/storage_backend.h src/storage_backend_disk.c
 	src/storage_backend_fs.c src/storage_backend_logical.c
