--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Oct 24 10:54:23 CEST Jim Meyering <meyering@redhat.com>
+
+	fix mingw compilation warning
+	* src/libvirt.c (winsock_init) [HAVE_WINSOCK2_H]: Always return a value.
+
 Thu Oct 23 15:20:00 CEST 2008 Chris Lalancete <clalance@redhat.com>
 	* src/storage_conf.c: brown paper bag bug.  I didn't preserve the
 	<sources> tags properly, and I didn't put the <source> tag into the
