--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Oct 24 12:32:23 BST Daniel P. Berrange <berrange@redhat.com>
+
+	* src/openvz_conf.c, src/openvz_conf.h: Extract version
+	info from vzctl tool
+	* src/openvz_driver.c: Implement the getVersion API call.
+
 Fri Oct 24 12:30:23 BST Daniel P. Berrange <berrange@redhat.com>
 
 	Fix mingw build
