--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 Mon Oct 27 17:14:56 +0100 2008 Jim Meyering <meyering@redhat.com>
 
+	use ARRAY_CARDINALITY more
+	* tests/nodeinfotest.c: Include "util.h".
+	* src/xen_internal.c: Likewise.
+	* src/qemu_conf.c (qemudCapsInit): Use ARRAY_CARDINALITY.
+	* src/storage_backend.c (virStorageBackendForType): Likewise.
+	* src/storage_backend_fs.c (virStorageBackendProbeFile): Likewise.
+	* src/xen_internal.c (xenHypervisorMakeCapabilitiesInternal): Likewise.
+	* src/xend_internal.c (xenDaemonParseSxpr): Likewise.
+	* tests/nodeinfotest.c (mymain): Likewise.
+	* tests/qparamtest.c (DO_TEST): Likewise.
+
+Mon Oct 27 17:14:56 +0100 2008 Jim Meyering <meyering@redhat.com>
+
 	exempt gnulib from write-avoidance syntax check
 
 Mon Oct 27 11:17:32 +0100 2008 Jim Meyering <meyering@redhat.com>
