--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Oct 28 10:22:22 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	* src/network_conf.c: Include <string.h> for declaration of memcmp.
+
 Mon Oct 27 17:14:56 +0100 2008 Jim Meyering <meyering@redhat.com>
 
 	use ARRAY_CARDINALITY more
