--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Oct 28 10:22:44 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	adapt to API change in gnulib
+	* qemud/qemud.c: Include <netdb.h>, not "getaddrinfo.h"
+	* src/remote_internal.c: Likewise.
+
 Tue Oct 28 10:22:22 +0100 2008 Jim Meyering <meyering@redhat.com>
 
 	* src/network_conf.c: Include <string.h> for declaration of memcmp.
